--- a/assets/templates/assets/software_type.html
+++ b/assets/templates/assets/software_type.html
@@ -3,13 +3,13 @@
 {% load static %}
 
   {% block title %}
-  <title>资产类型</title>
+  <title>软件类型</title>
   {% endblock title %}
 
 {% block index_active %}{% endblock %}
 {% block system_active %}active{% endblock %}
 {% block system_block %}display:block{% endblock %}
-{% block asset_type_active %}active{% endblock %}
+{% block software_type_active %}active{% endblock %}
 
 {% block navheader %}
     <section class="content-header">
@@ -18,19 +18,19 @@
                 <div class="col-12">
                     <ol class="breadcrumb">
                         <li class="breadcrumb-item"><a href="{% url 'assets:index' %}">首页</a></li>
-                        <li class="breadcrumb-item active">资产类型</li>
+                        <li class="breadcrumb-item active">软件类型</li>
                     </ol>
                 </div>
             </div>
         </div><!-- /.container-fluid -->
     </section>
 {% endblock navheader %}
-	
+
 {% block content %}
     {% get_is_admin request as is_admin %}
     <div class="card">
         <div class="card-header">
-            <h3 class="card-title">资产类型
+            <h3 class="card-title">软件类型
             <a href="javascript:void(0)" class="btn btn-sm btn-info ml-3 addtype">新增 + </a>
             </h3>
             <div class="card-tools">
@@ -47,20 +47,18 @@
             <table id="assets-lists" class="table table-bordered table-striped">
                 <thead>
                 <tr>
-                    <th>资产类型编码</th>
-                    <th>资产类型</th>
+                    <th>软件类型</th>
                     <th>操作</th>
                 </tr>
                 </thead>
                 <tbody>
-                {% for assettype in assettypes %}
-                <tr id="asset-{{ assettype.id }}">
-                    <td>{{ assettype.type_id }}</td>
-                    <td>{{ assettype.type_name }}</td>
+                {% for softwaretype in softwaretypes %}
+                <tr id="asset-{{ softwaretype.id }}">
+                    <td>{{ softwaretype.type_name }}</td>
                     <td>
-                        <a href="javascript:void(0);" id="{{ assettype.id }}" onclick="showupdatemodal(this);" title="{{ assettype.type_id }},{{ assettype.type_name }}">修改</a>
-                        <a href="javascript:void(0);" id="{{ assettype.id }}" onclick="createmodal(this);"
-                           title="{{ assettype.type_id }},{{ assettype.type_name }}">删除</a>
+                        <a href="javascript:void(0);" id="{{ softwaretype.id }}" onclick="showupdatemodal(this);" title="{{ softwaretype.type_name }}">修改</a>
+                        <a href="javascript:void(0);" id="{{ softwaretype.id }}" onclick="createmodal(this);"
+                           title="{{ softwaretype.type_name }}">删除</a>
                     </td>
                 </tr>
                 {% empty %}
@@ -78,24 +76,17 @@
     <div id="modal-container">
     </div>
 
-    <!--新增资产类型窗口-->
+    <!--新增软件类型窗口-->
     <div id="modal-addtype" class="iziModal">
         <form role="form" method="POST" id="submit-form" onsubmit="addtype(this);return false;" class="form-inline">
             {% csrf_token %}
             <div class="container-fluid">
                 <div class="row p-3">
                     <div class="col-12 mb-3">
-                        <h4><strong id="type-title">新增资产类型</strong></h4>
+                        <h4><strong id="type-title">新增软件类型</strong></h4>
                     </div>
                     <div class="col-4 mb-3">
-                        <label class="float-right">资产类型编码:</label>
-                    </div>
-                    <div class="col-8 mb-3">
-                        <input type="text" class="form-control" name="type_id" maxlength="256" required
-                               style="width: 100%;">
-                    </div>
-                    <div class="col-4 mb-3">
-                        <label class="float-right">资产类型:</label>
+                        <label class="float-right">软件类型:</label>
                     </div>
                     <div class="col-8 mb-3">
                         <input type="text" class="form-control" name="type_name" maxlength="256" required
@@ -121,7 +112,7 @@
 <script>
 	// 删除
 	createmodal = function (event) {
-		var thisObj = $(event);	//js对象转jquery对象  
+		var thisObj = $(event);	//js对象转jquery对象
 		var asset_id = thisObj.attr('id');
 		var asset_name = thisObj.attr("title");
 
@@ -131,7 +122,7 @@
 									<button type="button" class="btn btn-block btn-secondary btn-flat" data-iziModal-close>取消</button></div><div class="col-6 p-3">\
 									<a href="javascript:void(0)"><button type="button" class="btn btn-block btn-success btn-flat" id="' + asset_id + '-yes" title="\
 									' + asset_name + '" onclick="deletetype(this);">确定</button></a></div></div></div></div>');
-		
+
 		// 初始化弹出框
 		$("#modal-delete-" + asset_id).iziModal({
 			iconClass: 'icon-announcement',
@@ -140,26 +131,26 @@
 			overlayClose: false,	// 是否允许点击模态窗口的外部来关闭模态窗口。
 			closeOnEscape: false, 	// 是否允许通过点击ESC键来关闭模态窗口。
 		});
-				
+
 		// 打开弹出框
 		$('#modal-delete-' + asset_id).iziModal('open');
 	}
-	
-		
+
+
 	deletetype = function(event) {
 		toastr.options.closeButton = true;
 		toastr.options.showMethod = 'slideDown';
 		toastr.options.hideMethod = 'fadeOut';
 		toastr.options.closeMethod = 'fadeOut';
-		toastr.options.timeOut = 4000;	
-		toastr.options.extendedTimeOut = 0;	
-		
+		toastr.options.timeOut = 4000;
+		toastr.options.extendedTimeOut = 0;
+
 		var thisObj = $(event);	//js对象转jquery对象
 		var asset_id = thisObj.attr('id').split("-")[0];
 		var asset_name = thisObj.attr("title");
 		csrfmiddlewaretoken = '{{ request.COOKIES.csrftoken }}';
 		$.ajax({
-			url: "{% url 'assets:assettype_delete' %}",
+			url: "{% url 'assets:softwaretype_delete' %}",
 			async: true,
 			type: 'POST',
 			dataType: 'json',
@@ -173,19 +164,19 @@
 			error: errFunction,  //错误执行方法
 			success: succFunction, //成功执行方法
 		});
-		
+
 		function LoadFunction() {
 			//$("#aboutcontent").html('删除中...');
 			//alert('删除中');
 		};
-		
+
 		function errFunction() {
 			// 关闭弹出框
 			$('#modal-delete-' + asset_id).iziModal('close');
 			// 消息框
 			toastr.error('删除错误 <' + asset_name + '>');
 		};
-		
+
 		function succFunction(res) {
 			if (res.code != 200) {
 				// 关闭弹出框
@@ -196,9 +187,9 @@
 				// 先销毁 datatable , 动态删除数据后，然后再重建
 				var dttable = $('#assets-lists').DataTable();
 				dttable.destroy();
-				
+
 				$("#asset-" + asset_id).remove();
-				
+
 				$("#assets-lists").DataTable({
 					language: {
 						"sProcessing": "处理中...",
@@ -232,19 +223,19 @@
 					 scrollCollapse: true,
 					 jQueryUI: true,
 					 stateSave: true,	// 保存最后一次分页信息、排序信息，当页面刷新，或者重新进入这个页面，恢复上次的状态。
-					 stateDuration: 86400,	// 本地储存(0~更大)还是session储存(-1) 
+					 stateDuration: 86400,	// 本地储存(0~更大)还是session储存(-1)
 				});
-				
+
 				// 关闭弹出框
 				$('#modal-delete-' + asset_id).iziModal('close');
-				
+
 				// 消息框
 				toastr.success('成功删除 <' + asset_name + '>');
 			}
 		};
 	}
-	
-	// 新增资产类型
+
+	// 新增软件类型
 	$("#modal-addtype").iziModal({
 		iconClass: 'icon-announcement',
 		//width: 400,
@@ -256,36 +247,33 @@
 	$(document).on('click', '.addtype', function (event) {
 		event.preventDefault();
 		$('#modal-addtype').iziModal('open');
-		 $($("input[name='type_name']")[0]).val('');
-        $($("input[name='type_id']")[0]).val('');
+        $($("input[name='type_name']")[0]).val('');
         $('#btnsubmit').text('新增');
         $('#submit-form').attr('onsubmit','addtype(this);return false;')
         $('#obj_id').val('');
-        $('#type-title').text('新增资产类型')
+        $('#type-title').text('新增软件类型');
 	});
-	
+
 	addtype = function(event) {
 		toastr.options.closeButton = true;
 		toastr.options.showMethod = 'slideDown';
 		toastr.options.hideMethod = 'fadeOut';
 		toastr.options.closeMethod = 'fadeOut';
-		toastr.options.timeOut = 4000;	
-		toastr.options.extendedTimeOut = 0;	
+		toastr.options.timeOut = 4000;
+		toastr.options.extendedTimeOut = 0;
 		try {
 		var thisObj = $(event);	//js对象转jquery对象
 		var type_name = $(thisObj.find("input[name='type_name']")[0]).val();
-		var type_id = $(thisObj.find("input[name='type_id']")[0]).val();
 		csrfmiddlewaretoken = '{{ request.COOKIES.csrftoken }}';
-		
+
 		$.ajax({
-			url: "{% url 'assets:assettype_add' %}",
+			url: "{% url 'assets:softwaretype_add' %}",
 			async: true,
 			type: 'POST',
 			dataType: 'json',
 			data: {
 				'csrfmiddlewaretoken': csrfmiddlewaretoken,
 				'type_name': type_name,
-                'type_id':type_id,
 			},
 			timeout: 10000,
 			cache: true,
@@ -293,37 +281,36 @@
 			error: errFunction,  //错误执行方法
 			success: succFunction, //成功执行方法
 		});
-		
+
 		function LoadFunction() {
 			//$("#aboutcontent").html('删除中...');
 			//alert('删除中');
 		};
-		
+
 		function errFunction() {
 			// 消息框
-			toastr.error('新增资产类型错误');
+			toastr.error('新增软件类型错误');
 		};
-		
+
 		function succFunction(res) {
 			if (res.code != 200) {
 				// 消息框
-				toastr.error('新增资产类型错误: ' + res.err);
+				toastr.error('新增软件类型错误: ' + res.err);
 			} else {
 				// 消息框
-				toastr.success('新增资产类型成功');
+				toastr.success('新增软件类型成功');
 				var dttable = $('#assets-lists').DataTable();
-				var rowNode = dttable.row.add([type_id,type_name, '<a href="javascript:void(0);" id="'+res.pk+'" onclick="showupdatemodal(this);"\n' +
-                '                           title="'+type_id+','+type_name+'">修改</a> <a href="javascript:void(0);" id="'+res.pk+'" onclick="createmodal(this);"\n' +
-                '                           title="'+type_id+','+type_name+'">删除</a>']).draw().node();
+				var rowNode = dttable.row.add([type_name, '<a href="javascript:void(0);" id="'+res.pk+'" onclick="showupdatemodal(this);"\n' +
+                '                           title="'+type_name+'">修改</a> <a href="javascript:void(0);" id="'+res.pk+'" onclick="createmodal(this);"\n' +
+                '                           title="'+type_name+'">删除</a>']).draw().node();
 				rowNode.id = 'asset-'+res.pk
 				//$(rowNode).css('color', 'red').animate({color: 'black'});
 			}
 		};
-		
+
 		// 关闭弹出框
 		$("#modal-addtype").iziModal('close');
 		$(thisObj.find("input[name='type_name']")[0]).val('');
-		$(thisObj.find("input[name='type_id']")[0]).val('');
 
 		} catch(err) {
 		console.log(err);
@@ -333,13 +320,10 @@
 
 	showupdatemodal = function (thisObj) {
 		$('#modal-addtype').iziModal('open');
-		$('#type-title').text('修改资产类型')
+		$('#type-title').text('修改软件类型')
         obj_id = $(thisObj).attr("id");
-        type_obj = $(thisObj).attr("title").split(',');
-        type_id = type_obj[0]
-        type_name = type_obj[1]
+        type_name = $(thisObj).attr("title");
         $($("input[name='type_name']")[0]).val(type_name);
-        $($("input[name='type_id']")[0]).val(type_id);
         $('#obj_id').val(obj_id)
         $('#btnsubmit').text('修改');
         $('#submit-form').attr('onsubmit','updatetype(this);return false;');
@@ -355,19 +339,17 @@
 		try {
 		var thisObj = $(event);	//js对象转jquery对象
 		var type_name = $(thisObj.find("input[name='type_name']")[0]).val();
-		var type_id = $(thisObj.find("input[name='type_id']")[0]).val();
 		var obj_id = $('#obj_id').val()
 		csrfmiddlewaretoken = '{{ request.COOKIES.csrftoken }}';
 
 		$.ajax({
-			url: "{% url 'assets:assettype_update' %}",
+			url: "{% url 'assets:softwaretype_update' %}",
 			async: true,
 			type: 'POST',
 			dataType: 'json',
 			data: {
 				'csrfmiddlewaretoken': csrfmiddlewaretoken,
 				'type_name': type_name,
-                'type_id':type_id,
                 'obj_id':obj_id
 			},
 			timeout: 10000,
@@ -384,16 +366,16 @@
 
 		function errFunction() {
 			// 消息框
-			toastr.error('修改资产类型错误');
+			toastr.error('修改软件软件类型错误');
 		};
 
 		function succFunction(res) {
 			if (res.code != 200) {
 				// 消息框
-				toastr.error('修改资产类型错误: ' + res.err);
+				toastr.error('修改软件类型错误: ' + res.err);
 			} else {
 				// 消息框
-				toastr.success('修改资产类型成功');
+				toastr.success('修改软件类型成功');
 				var dttable = $("#assets-lists").DataTable({
 					language: {
 						"sProcessing": "处理中...",
@@ -432,11 +414,10 @@
 
 				var rowData = dttable.row("#asset-" + res.pk).data();
 
-				rowData[0] = type_id;
-				rowData[1] = type_name;
-				rowData[2] = '<a href="javascript:void(0);" id="'+res.pk+'" onclick="showupdatemodal(this);"\n' +
-                '                           title="'+type_id+','+type_name+'">修改</a> <a href="javascript:void(0);" id="'+res.pk+'" onclick="createmodal(this);"\n' +
-                '                           title="'+type_id+','+type_name+'">删除</a>';
+				rowData[0] = type_name;
+				rowData[1] = '<a href="javascript:void(0);" id="'+res.pk+'" onclick="showupdatemodal(this);"\n' +
+                '                           title="'+type_name+'">修改</a> <a href="javascript:void(0);" id="'+res.pk+'" onclick="createmodal(this);"\n' +
+                '                           title="'+type_name+'">删除</a>';
 
                 var rIndex = dttable.row("#asset-" + res.pk).index();
                 dttable.row(rIndex).data(rowData);
@@ -447,12 +428,11 @@
 		// 关闭弹出框
 		$("#modal-addtype").iziModal('close');
 		$(thisObj.find("input[name='type_name']")[0]).val('');
-		$(thisObj.find("input[name='type_id']")[0]).val('');
 		} catch(err) {
 		console.log(err);
 		}
 		return false;
 	}
-	
+
 </script>
 {% endblock js %}
